# ImageFactory-Quest

./: .gitignore  .gitmodules  CMakeLists.txt  mod.template.json  package-lock.json  package.json  qpm.json  watch-templates.js
.github/workflows/: build-ndk.yml  main.yml  publish.yml
assets/: edit-image-view.bsml  info-view.bsml  new-image-view-cell.bsml  new-image-view.bsml  saved-image-view-cell.bsml  saved-image-view.bsml
cmake/: git.cmake  gtest.cmake  strip.cmake
include/: IFImage.hpp  ImageManager.hpp  PluginConfig.hpp  main.hpp
include/Presenters/: Presenter.hpp
include/UI/: ImageCreationViewController.hpp  ImageCreatorViewController.hpp  ImageEditingViewController.hpp  ImageFactoryFlowCoordinator.hpp  ImageFactoryViewController.hpp
include/Utils/: UIUtils.hpp
scripts/: build.ps1  copy.ps1  createqmod.ps1  start-logging.ps1
src/: ConfigManager.cpp  ConfigManager.hpp  Hooks.cpp  Hooks.hpp  IFImage.cpp  IFImage.hpp  ImageManager.cpp  ImageManager.hpp  PluginConfig.cpp  PluginConfig.hpp  main.cpp  main.hpp
src/Hooks/: LoadImagesHook.cpp  MenuTransitionsHelper.cpp
src/Models/: IFSourceImage.hpp
src/Presenters/: ComboPresenters.cpp  ComboPresenters.hpp  LastNotePresenter.cpp  LastNotePresenter.hpp  PercentPresenters.cpp  PercentPresenters.hpp  Presenter.hpp  PresenterHooks.cpp  PresenterManager.hpp  ResultsScreenPresenter.hpp  ResultsScreenPresentor.cpp
src/UI/: EditImageView.cpp  EditImageView.hpp  ImageCreationViewController.cpp  ImageCreatorViewController.cpp  ImageEditingViewController.cpp  ImageFactoryFlowCoordinator.cpp  ImageFactoryFlowCoordinator.hpp  ImageFactoryViewController.cpp  InfoView.cpp  InfoView.hpp  NewImageView.cpp  NewImageView.hpp  SavedImageView.cpp  SavedImageView.hpp
src/UI/Cells/: NewImageViewCell.cpp  NewImageViewCell.hpp  NewImageViewTableData.hpp  SavedImageViewCell.cpp  SavedImageViewCell.hpp  SavedImageViewTableData.hpp
src/Utils/: FileUtils.cpp  FileUtils.hpp  StringUtils.cpp  StringUtils.hpp  UIUtils.cpp  UIUtils.hpp
